# stream-collection-service

./: Cargo.toml  Dockerfile  deploy.sh  entrypoint.sh  justfile  notes.txt
src/: catchers.rs  category.rs  main.rs  states.rs  tags.rs  twitch_follows.rs  twitch_stream.rs  twitch_token.rs  utils.rs
src/clients/twitch/: get_token.rs  mod.rs  streams.rs  tags.rs
src/clients/twitch/user/: follows.rs  get_user.rs  mod.rs  stream.rs
src/guards/: mod.rs  twitch_auth.rs
src/routes/: follows.rs  mod.rs  stream.rs  streams.rs
