[package]
name = "stream-collection-service"
version = "0.1.0"
authors = ["Ibrahim M <dev@beemstream.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" , branch = "master" }
isahc = { git = "https://github.com/sagebind/isahc.git", features = ["psl", "json"]}
futures = "0.3"
serde = "1"
serde_json = "1"
log = "0.4.0"
env_logger = "0.8.2"
