[package]
name = "stream-collection-service"
version = "0.1.11"
authors = ["Ibrahim M <dev@beemstream.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
isahc = { version = "1.2", features = ["psl", "json"]}
futures = "0.3"
serde = "1"
once_cell = "1.7.2"
